compiler/testData/diagnostics/tests/operatorRem/warningOnExplicitModCall1_2.kt
// !API_VERSION: 1.2

fun test() {
    1.<!DEPRECATION!>mod<!>(3)
}